# LiDAR-SLAM-from-scratch

./: CMakeLists.txt  README.md
cpp/: CMakeLists.txt
cpp/apps/: lidar_odometry.cpp  run_icp.cpp
cpp/include/: icp.hpp  pose_graph.hpp
cpp/include/icp/: kdtree.hpp  loop_closure.hpp  normal_estimation.hpp  point_to_plane.hpp  point_to_point.hpp  scan_context.hpp  svd.hpp  types.hpp
cpp/include/icp_p2p/: icp.hpp  kdtree.hpp  point_to_point.hpp  types.hpp
cpp/src/: lidar_odometry.cpp  pose_graph.cpp  run_icp.cpp
python/: bag_files.py  occupancy_grid.py  plot_trajectory.py
slam_viz/: CMakeLists.txt  package.xml
slam_viz/include/slam_viz/: slam_node.hpp
slam_viz/include/slam_viz/core/: file_utils.hpp  icp.hpp  kdtree.hpp  loop_closure.hpp  pose_graph.hpp  scan_context.hpp  types.hpp
slam_viz/include/slam_viz/ros/: slam_node.hpp
slam_viz/launch/: slam.launch.py
slam_viz/rviz/: slam_config.rviz
slam_viz/src/: slam_node.cpp
slam_viz/src/core/: file_utils.cpp  pose_graph.cpp
slam_viz/src/ros/: slam_node.cpp
tools/: convert_to_ply.cpp
